.provarCaches/00D0N000000hpkBUAQ/objects/ExampleEvent__e.object
<CustomObject>
    <fields>
        <fullName>EventNumber__c</fullName>
        <description>Example number field</description>
        <label>EventNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventPayload__c</fullName>
        <label>EventPayload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventText__c</fullName>
        <label>EventText</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ExampleEvent</label>
    <pluralLabel>ExamplesEvents</pluralLabel>
</CustomObject>